frontend added and login integration done

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 # PORT = 
 
-MONGO_URL = 'mongodb+srv://ikram:thRash1997@fullstackmernapp.cvg8f63.mongodb.net/Academy_PROJECT?retryWrites=true&w=majority'
+MONGO_URL = 'mongodb+srv://afp2023:the4HorseMen@amazonaffiliateproject.toiuziz.mongodb.net/SHOE?retryWrites=true&w=majority'
 
 JWT_SECRET = t0pS3cr3t!JWT-k3y-wiweatksth-com345plex-charact@ers_2023
 JWT_LIFETIME = 1d
