--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "multer": "^1.4.5-lts.1",
   },
   "name": "server",
   "version": "1.0.0",
